# wisebits_qa_automation_task

./: .gitignore  Dockerfile  README.md  pyproject.toml
wisebits_qa_automation_task/: conftest.py  main.py  pytest.ini
wisebits_qa_automation_task/allocators/: try_sql_allocators.py
wisebits_qa_automation_task/pages/w3schools/: try_sql_page.py
wisebits_qa_automation_task/tests/: test_tests.py
